--- a/ExtApp/ExtApp.AppConfig/packages.config
+++ b/ExtApp/ExtApp.AppConfig/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.0.0" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.0" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
