--- a/ExtApp/ExtApp.BLL/packages.config
+++ b/ExtApp/ExtApp.BLL/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.0.0" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
