--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -53,20 +53,39 @@
 
   <!-- log4net配置 -->
   <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+    <root>
+      <!--控制级别，由低到高: ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF-->
+      <!--比如定义级别为INFO，则INFO级别向下的级别，比如DEBUG日志将不会被记录-->
+      <!--如果没有定义LEVEL的值，则缺省为DEBUG-->
+      <level value="INFO"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <!--日志文件名开头-->
+      <file value="Logs\ExtApp.txt"/>
+      <!--多线程时采用最小锁定-->
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <!--日期的格式，每天换一个文件记录，如不设置则永远只记录一天的日志，需设置-->
+      <datePattern value="(yyyyMMdd)"/>
+      <!--是否追加到文件,默认为true，通常无需设置-->
+      <appendToFile value="true"/>
+      <!--变换的形式为日期，这种情况下每天只有一个日志-->
+      <!--此时MaxSizeRollBackups和maximumFileSize的节点设置没有意义-->
+      <!--<rollingStyle value="Date"/>-->
+      <!--变换的形式为日志大小-->
+      <!--这种情况下MaxSizeRollBackups和maximumFileSize的节点设置才有意义-->
+      <RollingStyle value="Size"/>
+      <!--每天记录的日志文件个数，与maximumFileSize配合使用-->
+      <MaxSizeRollBackups value="10"/>
+      <!--每个日志文件的最大大小-->
+      <!--可用的单位:KB|MB|GB-->
+      <!--不要使用小数,否则会一直写入当前日志-->
+      <maximumFileSize value="2MB"/>
+      <!--日志格式-->
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger %ndc - %message%newline" />
+        <conversionPattern value="%date [%t]%-5p %c - %m%n"/>
       </layout>
     </appender>
-
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="ConsoleAppender" />
-    </root>
-
-    <logger name="myLogger">
-      <level value="DEBUG" />
-    </logger>
   </log4net>
 
   <system.web>
