--- a/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
+++ b/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
@@ -81,11 +81,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authority\RoleDAL.cs" />
+    <Compile Include="Authority\MenuDAL.cs" />
+    <Compile Include="Authority\DeptRoleMenuDAL.cs" />
+    <Compile Include="BaseDAL.cs" />
     <Compile Include="Core\ConfigSectionDAL.cs" />
     <Compile Include="Core\ConfigDAL.cs" />
     <Compile Include="Core\DicItemDAL.cs" />
     <Compile Include="Core\DicDAL.cs" />
     <Compile Include="Core\LogDAL.cs" />
+    <Compile Include="Personnel\UserDAL.cs" />
     <Compile Include="Personnel\DeptDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -107,9 +112,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Authority\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
