--- a/ExtApp/ExtApp.AppConfig/packages.config
+++ b/ExtApp/ExtApp.AppConfig/packages.config
@@ -4,6 +4,7 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net452" />
   <package id="log4net" version="2.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
