--- a/ExtApp/ExtApp.DAL/packages.config
+++ b/ExtApp/ExtApp.DAL/packages.config
@@ -5,6 +5,7 @@
   <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
