--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
+    <Content Include="app\model\authority\MenuTree.js" />
     <Content Include="app\model\sys\DicItem.js" />
     <Content Include="app\model\sys\Dic.js" />
     <Content Include="app\model\sys\ConfigSection.js" />
@@ -164,6 +165,7 @@
     <Content Include="app\model\sys\Log.js" />
     <Content Include="app\model\sys\Role.js" />
     <Content Include="app\plugin\ProgressBarPager.js" />
+    <Content Include="app\store\authority\MenuTree.js" />
     <Content Include="app\store\personnel\DeptTree.js" />
     <Content Include="app\store\sys\ConfigSection.js" />
     <Content Include="app\store\sys\Config.js" />
