--- a/ExtApp/ExtApp.Controllers/ExtApp.Controllers.csproj
+++ b/ExtApp/ExtApp.Controllers/ExtApp.Controllers.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Core\LogController.cs" />
     <Compile Include="Authority\LoginController.cs" />
     <Compile Include="Controller\RoleController.cs" />
-    <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Personnel\UserController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
