--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -162,7 +162,7 @@
     <Content Include="app\model\personnel\Dept.js" />
     <Content Include="app\model\sys\LogginSession.js" />
     <Content Include="app\model\core\Log.js" />
-    <Content Include="app\model\sys\Role.js" />
+    <Content Include="app\model\authority\Role.js" />
     <Content Include="app\plugin\ProgressBarPager.js" />
     <Content Include="app\store\personnel\DeptTree.js" />
     <Content Include="app\store\sys\ConfigSection.js" />
@@ -187,7 +187,7 @@
     <Content Include="app\store\sys\DicItem.js" />
     <Content Include="app\store\core\Log.js" />
     <Content Include="app\store\sys\Dic.js" />
-    <Content Include="app\store\sys\Role.js" />
+    <Content Include="app\store\authority\Role.js" />
     <Content Include="app\util\Style.js" />
     <Content Include="app\util\Config.js" />
     <Content Include="app\view\personnel\dept\Add.js" />
@@ -223,24 +223,22 @@
     <Content Include="app\view\main\ChangePwdController.js" />
     <Content Include="app\view\core\logs\List.js" />
     <Content Include="app\view\core\logs\ListController.js" />
-    <Content Include="app\view\sys\role\Edit.js" />
-    <Content Include="app\view\sys\role\EditController.js" />
-    <Content Include="app\view\sys\role\List.js" />
-    <Content Include="app\view\sys\role\ListController.js" />
-    <Content Include="app\view\sys\user\AddController.js" />
-    <Content Include="app\view\sys\user\EditController.js" />
-    <Content Include="app\view\sys\user\ListController.js" />
+    <Content Include="app\view\authority\role\Edit.js" />
+    <Content Include="app\view\authority\role\EditController.js" />
+    <Content Include="app\view\authority\role\List.js" />
+    <Content Include="app\view\authority\role\ListController.js" />
+    <Content Include="app\view\personnel\user\EditController.js" />
+    <Content Include="app\view\personnel\user\ListController.js" />
     <Content Include="app\model\authority\Menu.js" />
-    <Content Include="app\model\sys\User.js" />
+    <Content Include="app\model\personnel\User.js" />
     <Content Include="app\store\authority\Menu.js" />
-    <Content Include="app\store\sys\User.js" />
+    <Content Include="app\store\personnel\User.js" />
     <Content Include="app\util\Theme.js" />
     <Content Include="app\view\main\accordion\Menu.js" />
     <Content Include="app\view\main\accordion\Index.js" />
     <Content Include="app\view\main\Login.js" />
-    <Content Include="app\view\sys\user\Add.js" />
-    <Content Include="app\view\sys\user\Edit.js" />
-    <Content Include="app\view\sys\user\List.js" />
+    <Content Include="app\view\personnel\user\Edit.js" />
+    <Content Include="app\view\personnel\user\List.js" />
     <Content Include="app\view\Viewport.js" />
     <Content Include="App_Data\ExtApp.ldf">
       <DependentUpon>ExtApp.mdf</DependentUpon>
