完善数据层

--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -86,7 +86,7 @@
   <ItemGroup>
     <Compile Include="Authority\View\ChangePwdModel.cs" />
     <Compile Include="Authority\View\LoginModel.cs" />
-    <Compile Include="Sort.cs" />
+    <Compile Include="Enum\Sort.cs" />
     <Compile Include="Result\DataResult.cs" />
     <Compile Include="Personnel\View\DeptEditModel.cs" />
     <Compile Include="Personnel\View\DeptAddModel.cs" />
