--- a/ExtApp/ExtApp.BLL/packages.config
+++ b/ExtApp/ExtApp.BLL/packages.config
@@ -15,8 +15,13 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
+  <package id="Quartz" version="2.5.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="Spring.Aop" version="1.3.2" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
+  <package id="Spring.Data" version="1.3.2" targetFramework="net452" />
   <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
+  <package id="Spring.Scheduling.Quartz" version="1.3.2" targetFramework="net452" />
   <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
 </packages>
