--- a/ExtApp/ExtApp.Model/packages.config
+++ b/ExtApp/ExtApp.Model/packages.config
@@ -7,6 +7,7 @@
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
+  <package id="Quartz" version="2.5.0" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
   <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
