--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -145,6 +145,10 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Quartz" publicKeyToken="f6b8c98a402cc8a4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.0.0" newVersion="2.5.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
