删除无用文件

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,38 +155,33 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
-    <Content Include="app\model\sys\DicItem.js" />
-    <Content Include="app\model\sys\Dic.js" />
-    <Content Include="app\model\sys\ConfigSection.js" />
-    <Content Include="app\model\sys\Config.js" />
+    <Content Include="app\model\core\DicItem.js" />
+    <Content Include="app\model\core\Dic.js" />
+    <Content Include="app\model\core\ConfigSection.js" />
+    <Content Include="app\model\core\Config.js" />
     <Content Include="app\model\personnel\Dept.js" />
-    <Content Include="app\model\sys\LogginSession.js" />
     <Content Include="app\model\core\Log.js" />
     <Content Include="app\model\authority\Role.js" />
     <Content Include="app\plugin\ProgressBarPager.js" />
     <Content Include="app\store\personnel\DeptTree.js" />
-    <Content Include="app\store\sys\ConfigSection.js" />
-    <Content Include="app\store\sys\Config.js" />
+    <Content Include="app\store\core\ConfigSection.js" />
+    <Content Include="app\store\core\Config.js" />
     <Content Include="app\view\core\logs\View.js" />
     <Content Include="app\view\main\desktop\SettingsController.js" />
-    <Content Include="app\view\sys\config\AddSection.js" />
-    <Content Include="app\view\sys\config\AddSectionController.js" />
-    <Content Include="app\view\sys\config\Add.js" />
-    <Content Include="app\view\sys\config\AddController.js" />
-    <Content Include="app\view\sys\config\EditSection.js" />
-    <Content Include="app\view\sys\config\EditSectionController.js" />
-    <Content Include="app\view\sys\config\Edit.js" />
-    <Content Include="app\view\sys\config\EditController.js" />
-    <Content Include="app\view\sys\config\List.js" />
-    <Content Include="app\view\sys\config\ListController.js" />
+    <Content Include="app\view\core\config\EditSection.js" />
+    <Content Include="app\view\core\config\EditSectionController.js" />
+    <Content Include="app\view\core\config\Edit.js" />
+    <Content Include="app\view\core\config\EditController.js" />
+    <Content Include="app\view\core\config\List.js" />
+    <Content Include="app\view\core\config\ListController.js" />
     <Content Include="app\widget\DeptSelect.js" />
     <Content Include="app\widget\Notify.js" />
     <Content Include="app\widget\SearchForm.js" />
     <Content Include="app\plugin\TabCloseMenu.js" />
     <Content Include="app\store\personnel\Dept.js" />
-    <Content Include="app\store\sys\DicItem.js" />
+    <Content Include="app\store\core\DicItem.js" />
     <Content Include="app\store\core\Log.js" />
-    <Content Include="app\store\sys\Dic.js" />
+    <Content Include="app\store\core\Dic.js" />
     <Content Include="app\store\authority\Role.js" />
     <Content Include="app\util\Style.js" />
     <Content Include="app\util\Config.js" />
@@ -194,21 +189,15 @@
     <Content Include="app\view\personnel\dept\AddController.js" />
     <Content Include="app\view\personnel\dept\List.js" />
     <Content Include="app\view\personnel\dept\ListController.js" />
-    <Content Include="app\view\sys\dic\EditItem.js" />
-    <Content Include="app\view\sys\dic\AddItem.js" />
-    <Content Include="app\view\sys\dic\EditItemController.js" />
-    <Content Include="app\view\sys\dic\AddItemController.js" />
-    <Content Include="app\view\sys\dic\EditController.js" />
-    <Content Include="app\view\sys\dic\Edit.js" />
-    <Content Include="app\view\sys\dic\Add.js" />
-    <Content Include="app\view\sys\dic\AddController.js" />
-    <Content Include="app\view\sys\dic\List.js" />
-    <Content Include="app\view\sys\dic\ListController.js" />
+    <Content Include="app\view\core\dic\EditItem.js" />
+    <Content Include="app\view\core\dic\EditItemController.js" />
+    <Content Include="app\view\core\dic\EditController.js" />
+    <Content Include="app\view\core\dic\Edit.js" />
+    <Content Include="app\view\core\dic\List.js" />
+    <Content Include="app\view\core\dic\ListController.js" />
     <Content Include="app\view\main\accordion\MenuController.js" />
-    <Content Include="app\view\sys\appMenu\Edit.js" />
-    <Content Include="app\view\sys\appMenu\Add.js" />
-    <Content Include="app\view\sys\appMenu\EditController.js" />
-    <Content Include="app\view\sys\appMenu\AddController.js" />
+    <Content Include="app\view\authority\appMenu\Edit.js" />
+    <Content Include="app\view\authority\appMenu\EditController.js" />
     <Content Include="app\view\main\ChangePwd.js" />
     <Content Include="app\view\main\accordion\IndexController.js" />
     <Content Include="app\view\main\desktop\BogusMenuModule.js" />
@@ -218,8 +207,8 @@
     <Content Include="app\view\main\desktop\Settings.js" />
     <Content Include="app\view\main\desktop\Wallpaper.js" />
     <Content Include="app\view\main\LoginController.js" />
-    <Content Include="app\view\sys\appMenu\List.js" />
-    <Content Include="app\view\sys\appMenu\ListController.js" />
+    <Content Include="app\view\authority\appMenu\List.js" />
+    <Content Include="app\view\authority\appMenu\ListController.js" />
     <Content Include="app\view\main\ChangePwdController.js" />
     <Content Include="app\view\core\logs\List.js" />
     <Content Include="app\view\core\logs\ListController.js" />
