--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Authority\View\ChangePwdModel.cs" />
     <Compile Include="Authority\View\LoginModel.cs" />
     <Compile Include="Enum\Sort.cs" />
+    <Compile Include="Personnel\View\UserEditModel.cs" />
     <Compile Include="Result\DataResult.cs" />
     <Compile Include="Personnel\View\DeptEditModel.cs" />
     <Compile Include="Personnel\View\DeptAddModel.cs" />
