--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -92,9 +92,10 @@
     <Compile Include="Authority\View\LoginModel.cs" />
     <Compile Include="Enum\Sort.cs" />
     <Compile Include="Personnel\View\DeptTreeNode.cs" />
-    <Compile Include="Personnel\View\UserEditModel.cs" />
+    <Compile Include="Personnel\View\UserListParam.cs" />
+    <Compile Include="Personnel\View\UserEditParam.cs" />
     <Compile Include="Result\DataResult.cs" />
-    <Compile Include="Personnel\View\DeptEditModel.cs" />
+    <Compile Include="Personnel\View\DeptEditParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\LoginResult.cs" />
     <Compile Include="Result\ListResult.cs" />
