数据库脚本更新

--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -62,11 +62,15 @@
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <!--日志文件名开头-->
-      <file value="Logs\ExtApp.txt" />
+      <file value="Logs\" />
       <!--多线程时采用最小锁定-->
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <!--日期为滚动类型(每天产生一个日志文件)-->
+      <param name="RollingStyle" value="Date"/>
       <!--日期的格式，每天换一个文件记录，如不设置则永远只记录一天的日志，需设置-->
-      <datePattern value="(yyyyMMdd)" />
+      <datePattern value="yyyy-MM-dd&quot;.log&quot;" />
+      <!--关闭固定文件方式-->
+      <param name="StaticLogFileName" value="false"/>
       <!--是否追加到文件,默认为true，通常无需设置-->
       <appendToFile value="true" />
       <!--变换的形式为日期，这种情况下每天只有一个日志-->
