--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -90,6 +90,8 @@
   <ItemGroup>
     <Compile Include="Authority\View\ChangePwdModel.cs" />
     <Compile Include="Authority\View\LoginModel.cs" />
+    <Compile Include="Authority\View\RoleEditParam.cs" />
+    <Compile Include="Authority\View\RoleListParam.cs" />
     <Compile Include="Core\View\LogListParam.cs" />
     <Compile Include="Core\View\MenuNode.cs" />
     <Compile Include="Enum\Sort.cs" />
