--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Authority\View\RoleEditParam.cs" />
     <Compile Include="Authority\View\RoleListParam.cs" />
     <Compile Include="Core\View\ConfigEditParam.cs" />
+    <Compile Include="Core\View\ConfigSectionParam.cs" />
+    <Compile Include="Core\View\DicItemParam.cs" />
+    <Compile Include="Core\View\DicParam.cs" />
     <Compile Include="Core\View\LogListParam.cs" />
     <Compile Include="Core\View\MenuNode.cs" />
     <Compile Include="Enum\Sort.cs" />
