--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -167,6 +167,7 @@
     <Content Include="app\renderer\StatusRenderer.js" />
     <Content Include="app\store\authority\MenuTree.js" />
     <Content Include="app\store\authority\RoleAll.js" />
+    <Content Include="app\store\core\DicTree.js" />
     <Content Include="app\store\personnel\DeptTree.js" />
     <Content Include="app\store\core\ConfigSection.js" />
     <Content Include="app\store\core\Config.js" />
