--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -68,7 +68,7 @@
       <!--日期为滚动类型(每天产生一个日志文件)-->
       <param name="RollingStyle" value="Date"/>
       <!--日期的格式，每天换一个文件记录，如不设置则永远只记录一天的日志，需设置-->
-      <datePattern value="yyyy-MM-dd&quot;.log&quot;" />
+      <datePattern value="yyyyMMdd&quot;.log&quot;" />
       <!--关闭固定文件方式-->
       <param name="StaticLogFileName" value="false"/>
       <!--是否追加到文件,默认为true，通常无需设置-->
